fix: remove postinstall, use manual run instead

--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "gemini-cli-acp-patch",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Patch for @google/gemini-cli to fix ACP mode hanging when running as subprocess with piped stdio",
   "main": "patch.js",
   "bin": {
-    "gemini-cli-acp-patch": "patch.js"
-  },
-  "scripts": {
-    "postinstall": "node patch.js"
+    "gemini-cli-acp-patch": "./patch.js"
   },
   "keywords": ["gemini-cli", "acp", "patch", "fix"],
   "author": "Rishi Randhawa",
